--- a/trytodo/笔试题/css水平垂直居中.html
+++ b/trytodo/笔试题/css水平垂直居中.html
@@ -41,7 +41,15 @@
     display:inline-block;
 } */
 .content{
-    
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:1000px;
+}
+.inner{
+    background-color: aqua;
+    width:100px;
+    height:100px;
 }
 </style>
 
