--- a/trytodo/DOM事件/1.html
+++ b/trytodo/DOM事件/1.html
@@ -7,27 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-    var arrp=[-5,-4,-3,-2,0,1,3,4,5];
-    var M=0,num=0;
-    if(arrp.indexOf(0)==-1){
-    var index=arrp.indexOf(1);
-   }
-   else{
-    var index=arrp.indexOf(0);
-   }
-   for(var i=index;i<arrp.length;i++){
-        M=M+arrp[i];
+<script>
+    var arrp = [-5, -4, -3, -2, 0, 1, 3, 4, 5];
+    var M = 0, num = 0;
+    if (arrp.indexOf(0) == -1) {
+        var index = arrp.indexOf(1);
+    }
+    else {
+        var index = arrp.indexOf(0);
+    }
+    for (var i = index; i < arrp.length; i++) {
+        M = M + arrp[i];
         num++;
     }
-   for(var i=index-1;i>0;i--){
-        M=M+arrp[i];
-        if(M<=0){
-    	console.log(num);
-        break;
+    for (var i = index - 1; i > 0; i--) {
+        M = M + arrp[i];
+        if (M <= 0) {
+            console.log(num);
+            break;
         }
         num++;
-    }  
-    </script>
+    }
+</script>
 </body>
 </html>
