--- a/closerAndLet.html
+++ b/closerAndLet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,11 +18,11 @@
     //     ['a', 'b', 'c', 'd', 'e'].forEach(function (value, i) {
     //      var btn = document.createElement('button');
     //      btn.appendChild(document.createTextNode('Button ' + i));
-    //      btn.addEventListener('click', function() { console.log(i); });
     //      document.body.appendChild(btn);
     //     });
     //     for (let i = 0; i < 5; i++) {
     //     var btn = document.createElement('button');
+    //sss      btn.addEventListener('click', function() { console.log(i); });
     //     btn.appendChild(document.createTextNode('Button ' + i));
     //     btn.addEventListener('click', function(){ console.log(i); });
     //     document.body.appendChild(btn);
